fix: layout overflowing in case of long unbroken lines

--- a/src/components/JSONEditor.scss
+++ b/src/components/JSONEditor.scss
@@ -9,6 +9,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 
   &.focus {
     box-shadow: $outline-shadow;
